<resources>
    <string name="app_name">FirebaseS9</string>
    <string name="valbtlogin">LOGIN</string>
    <string name="valetemail">Enter email</string>
    <string name="valetpassword">Enter password</string>
    <string name="valbtregister">REGISTER</string>
    <string name="valfullname">Enter Full Name</string>
    <string name="valetcountry">Enter country</string>
    <string name="valenteremail">Enter email</string>
    <string name="valenterpassword">Enter password</string>
    <string name="valbtsave">SAVE</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_product">Product</string>
    <string name="menu_register">Register</string>
    <string name="menu_animals">Animals</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>